--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -18,13 +17,11 @@ body {
   height: 100%;
   background-color: #8395DD;
 }
-
-header img {
+body header img {
   height: 5.5rem;
-  margin-right: 10px;
+  margin-right: auto;
 }
-
-header {
+body header {
   display: flex;
   flex-direction: column;
   gap: 50px;
@@ -32,163 +29,64 @@ header {
   position: relative;
   z-index: 1;
 }
-
-main {
+body main {
   padding: 20px;
 }
-
-/*NAVBAR*/
-nav {
-  width: 100%;
-  height: 5rem;
-  padding: 0 10px;
-  display: flex;
-  align-items: center;
-  position: relative;
-  top: 0;
-  left: 0;
-}
-
-.check, .toggle {
-  width: 42px;
-  height: 30px;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  z-index: 5;
-}
-
-.check {
-  z-index: 4;
-  cursor: pointer;
-  opacity: 0;
-}
-
-.toggle {
-  z-index: 3;
-}
-
-.hamburgermenu {
-  padding-bottom: 50px;
-}
-
-.check:checked ~ .toggle .hamburgermenu img {
-  filter: brightness(0) saturate(100%) invert(94%) sepia(4%) saturate(0%) hue-rotate(177deg) brightness(103%) contrast(100%);
-}
-
-.menu {
-  width: 100%;
-  height: 100vh;
-  padding-top: 70px;
-  list-style: none;
-  color: #F8F8F8;
-  background-color: #0E162F;
-  position: absolute;
-  top: 0;
-  left: -100%;
-  z-index: 2;
-  opacity: 90%;
-  transition: 0.5s all linear; /*ändra sen kolla olika*/
-}
-
-.menu li {
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-  padding-bottom: 6px;
-  font-size: 18px;
-}
-
-.menu li:hover {
-  background-color: #5D5A67;
-  cursor: pointer;
-}
-
-.check:checked ~ .menu {
-  left: 0;
-  opacity: 98%;
-}
-
-/*NAVBAR SLUT*/
-a {
+body main a {
   text-decoration: none;
   display: inline-block;
 }
-
-button {
+body main button {
   background: none;
   border: none;
   padding: 0;
   cursor: pointer;
 }
-
-.add-task-button img {
-  display: inline-block; /* Se till att SVG:n visas korrekt */
-  width: auto; /* Behåll proportionerna */
-  height: auto; /* Behåll proportionerna */
+body main .add-task-button img {
+  display: inline-block;
+  width: auto;
+  height: auto;
   padding-left: 10px;
 }
-
-.add-task {
+body main .add-task {
   margin: 20px 0;
 }
-
-.add-task-button:hover img {
-  filter: brightness(1.5);
-  transform: scale(1.05);
-  transition: 0.2s ease-in;
-}
-
-.popup-form {
+body main .popup-form {
   background: #F8F8F8;
   padding: 20px;
   border-radius: 24px;
   width: 100%;
   box-shadow: 0 4px 8px #0B0824;
-  transition: 0.5s all linear;
 }
-
-.popup-form input,
-.popup-form textarea {
-  background-color: #dddbe4; /*testa ändra färg till 500*/
+body main .popup-form input,
+body main .popup-form textarea {
+  background-color: #dddbe4;
   width: 100%;
   margin-bottom: 10px;
   padding: 10px;
   border: 1px solid #B0ADBA;
   border-radius: 10px;
+  font: inherit;
   font-size: 14px;
   color: #0B0824;
-  opacity: 29; /*opacity ska va 20% egentligen*/
+  opacity: 29;
 }
-
-::-moz-placeholder {
+body main ::-moz-placeholder {
   color: #0B0824;
 }
-
-::placeholder {
+body main ::placeholder {
   color: #0B0824;
 }
-
-.edit-task textarea:focus {
-  height: auto;
-}
-
-.edit-task button {
-  cursor: pointer;
-}
-
-.popup-buttons {
+body main .popup-buttons {
   display: flex;
-  flex-direction: row;
   justify-content: flex-end;
+  gap: 10px;
 }
-
-.task-list ul {
+body main .task-list {
   list-style: none;
-  padding: 0;
+  padding-bottom: 5rem;
 }
-
-.task-list li {
+body main .task-list li {
   background: #F8F8F8;
   margin: 10px;
   padding: 15px;
@@ -198,104 +96,178 @@ button {
   justify-content: space-between;
   align-items: center;
 }
-
-.task {
+body main .task {
   width: 100%;
 }
-
-.top-row {
+body main .top-row {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
-.top-left {
+body main .top-left {
   display: flex;
   flex-direction: row;
   gap: 6px;
 }
-
-.top-right {
+body main .top-left i {
+  padding-top: 0.2rem;
+}
+body main .top-right {
   display: flex;
   flex-direction: row;
   gap: 3px;
 }
-
-.task h3 {
+body main .task h3 {
   margin: 0 0 10px;
   font-size: 18px;
   color: #0B0824;
 }
-
-.task p {
+body main .task p {
   margin: 0;
   font-size: 14px;
   color: #0B0824;
-  padding-left: 1.1rem;
+  padding-left: 1.4rem;
+}
+body main .close-popup {
+  display: flex;
+  align-self: center;
+  padding-bottom: 15px;
+  color: #0B0824;
+  text-decoration: none;
+}
+body main .add-task-button:hover img {
+  transform: scale(1.1);
+  transition: 0.2s ease-in;
+}
+body main .popup-buttons button:hover img {
+  transform: scale(1.1);
+  transition: 0.2s ease-in;
+}
+body main .close-popup:hover {
+  text-decoration: underline;
+  color: red;
+}
+body main button[name=toggle_complete] i {
+  font-size: 1.2rem;
+}
+body main button[name=toggle_complete]:hover i {
+  color: #8395DD;
+  transform: scale(1.1);
+  transition: 0.2s ease-in-out;
+}
+body main button[name=delete] img a.edit-button img {
+  width: 1.1rem;
+  transition: 0.2s ease-in-out;
+}
+body main button[name=delete]:hover img {
+  transform: scale(1.1);
+  filter: brightness(0) saturate(100%) invert(40%) sepia(96%) saturate(3985%) hue-rotate(355deg) brightness(95%) contrast(90%);
+}
+body main a.edit-button:hover img {
+  transform: scale(1.1);
+  filter: brightness(0) saturate(100%) invert(47%) sepia(81%) saturate(379%) hue-rotate(183deg) brightness(98%) contrast(99%);
 }
 
-/*
-.action-button {
-    display: flex;
-    flex-direction: row;
-    gap: 8px; 
-  }
-
-
-//vill inte flyttas 
-.close-popup {
-    padding-top: 50px;
-    color: $neutral-900;
-    text-decoration: none;
+nav {
+  width: 100%;
+  height: 4rem;
+  padding: 0 1rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  top: 0;
+  left: 0;
 }
 
-.close-popup:hover {
-    text-decoration: underline;
+.menu-toggle {
+  width: 2.5rem;
+  height: 1.8rem;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 5;
+  display: none;
 }
 
-.action-button {
-    background: none;
-    border: none;
-    cursor: pointer;
-    padding: 8px;
-    border-radius: 4px;
-    transition: background-color 0.2s ease;
-  }
-
-
-.action-button i {
-  font-size: 16px;
-  color: #555;
+.menu-toggle:checked ~ .menu {
+  opacity: 1;
 }
 
-.action-button:hover {
-  background-color: #f0f0f0;
+label {
+  z-index: 3;
+  cursor: pointer;
+  position: absolute;
+  top: 5px;
+  left: 0;
 }
-*/
-/*DATOR HÄR*/
+
+.menu-toggle:checked ~ label .hamburgermenu img {
+  filter: brightness(0) saturate(100%) invert(94%) sepia(4%) saturate(0%) hue-rotate(177deg) brightness(103%) contrast(100%);
+}
+
+.menu {
+  width: 100%;
+  height: 100vh;
+  padding-top: 4.3rem;
+  list-style: none;
+  color: #F8F8F8;
+  background-color: #0E162F;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  z-index: 2;
+  opacity: 90%;
+  transition: 0.6s all linear;
+}
+
+.option {
+  text-align: left;
+  text-decoration: none;
+  color: #F8F8F8;
+  padding-top: 10px;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.menu li {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-left: 1.25rem;
+  padding-bottom: 10px;
+  font-size: 1.25rem;
+}
+
+.menu li:hover {
+  background-color: #5D5A67;
+}
+
+.menu-toggle:checked ~ .menu {
+  left: 0;
+  opacity: 98%;
+}
+
 @media screen and (min-width: 900px) {
   body {
     width: 60%;
   }
-  header {
+  body header {
     padding-left: 9.5rem;
   }
-  header img {
-    margin-right: auto;
-  }
-  .add-task-button {
+  body .add-task-button {
     padding-left: 8rem;
   }
-  .add-task {
+  body .add-task {
     padding-left: 8.5rem;
   }
-  .popup-form {
+  body .popup-form {
     width: 400px;
   }
-  .task-list {
+  body .task-list {
     padding-left: 8rem;
   }
-  nav {
+  body nav {
     width: 40%;
   }
 }/*# sourceMappingURL=style.css.map */
